# obras61

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml  seed_cotacao_sim.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: multitenancy.py  security.py
backend/app/models/: __init__.py  base.py  centro_custo.py  custos_referencia.py  documentos.py  equipe.py  financeiro.py  lead.py  obra.py  orcamento.py  rdo.py  suprimentos.py  tenant.py  unidade.py  vision.py
backend/app/schemas/: auth.py  centro_custo.py  empreendimento.py  financeiro.py  obra.py  orcamento.py  rdo.py  suprimentos.py
backend/app/services/: evm.py  extrator_cotacao.py  gemini.py
backend/app/utils/: catalogo.py  excel.py
backend/app/workers/: celery_app.py
backend/data/: catalogo_materiais.xlsx
backend/migrations/: env.py
backend/migrations/versions/: 001_schema_inicial.py  002_rdo.py  003_suprimentos_financeiro.py  004_fix_obra_id_nullable.py  005_transferencias_estoque.py  006_cotacoes.py  007_centro_custo.py  008_marca_modelo_cotacao.py  009_soft_delete_empreendimentos.py  010_documentos.py  011_fix_documentos_colunas.py  012_empreendimento_campos_extras.py  013_equipes.py  014_obra_datas_etapa_gantt.py  015_fix_drift_estimativas_cotacao_financeiro.py  017_funil_vendas.py  (+5 more)
backend/scripts/: audit_schema.py  db.py  e2e_documentos.py  e2e_espelho.py  e2e_funil.py  e2e_smoke.py  gerar_propostas_teste.py  reset_senha.py  seed_cc_catalogo.py
(+82 files in other folders)
