[tool.poetry]
name = "obras-backend"
version = "0.1.0"
description = "Sistema de Gestão de Obras"
authors = ["Obras Platform <dev@obras.app>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = { extras = ["email"], version = "^2.9" }
pydantic-settings = "^2.6"
python-jose = { extras = ["cryptography"], version = "^3.3" }
passlib = { extras = ["bcrypt"], version = "^1.7" }
python-multipart = "^0.0.20"
celery = { extras = ["redis"], version = "^5.4" }
redis = "^5.2"
google-genai = "^1.0"
boto3 = "^1.35"                   # S3-compatible storage
httpx = "^0.28"
tenacity = "^9.0"
numpy = "^2.1"                    # Monte Carlo
openpyxl = "^3.1"               # Excel import/export

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
httpx = "^0.28"
ruff = "^0.8"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
